1. Collection API Улучшения[#174294]