@@ -17,7 +17,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -25,15 +25,13 @@ public class ConvertList2ArrayTest {
                 {4, 5, 6},
                 {7, 0, 0}
         };
-        assertThat(result, is(expect));
+        assertThat(expect, is(result));
     }
 
     @Test
     public void convert() {
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
-        List<Integer> result = new ConvertList2Array().convert(list);
-        assertThat(result, is(Arrays.asList(1, 2, 3, 4, 5, 6)));
+        List<int[]> in = List.of(new int[]{1, 2}, new int[]{3, 4, 5, 6});
+        List<Integer> result = new ConvertList2Array().convert(in);
+        assertThat(result, is(List.of(1, 2, 3, 4, 5, 6)));
     }
 }
