@@ -14,15 +14,13 @@ import static org.junit.Assert.*;
 public class ConvertMatrix2ListTest {
     @Test
     public void when2on2ArrayThenList4() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
+        ConvertMatrix2List in = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
-        List<Integer> result = list.toList(input);
-        assertThat(result, is(expect));
+        List<Integer> expect = List.of(1, 2, 3, 4);
+        List<Integer> result = in.toList(input);
+        assertThat(expect, is(result));
     }
 }
